# Text_Summarizer

./: LICENSE  README.md  main.py  pyproject.toml
config/: config.yaml  params.yaml
src/text_summarizer/: __init__.py
src/text_summarizer/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/text_summarizer/config/: configuration.py
src/text_summarizer/entity/: __init__.py
src/text_summarizer/pipeline/: stage_01_data_ingestion.py  stage_04_model_trainer.py
src/text_summarizer/utils/: common.py
